manifest/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-db
  labels:
    app: feedback-db
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: feedback-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback-db
  template:
    metadata:
      labels:
        app: feedback-db
    spec:
      containers:
        - name: feedback-db
          image: gcr.io/$PROJECT_ID/feedback_db:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-pvc
